[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Enemies/Exploder.gd" type="Script" id=2]
[ext_resource path="res://Assets/white_circle.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tileset/original_uv_textured.png" type="Texture" id=4]
[ext_resource path="res://palette_swap.material" type="Material" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CalmSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TriggeredSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CalmSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TriggeredSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 64.4981

[node name="Exploder" type="KinematicBody2D"]
material = ExtResource( 5 )
script = ExtResource( 2 )
Speed = 100

[node name="Radius" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.290196 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="TriggeredSprite" type="Sprite" parent="."]
visible = false
use_parent_material = true
texture = ExtResource( 4 )
hframes = 5
region_enabled = true
region_rect = Rect2( 112, 320, 80, 16 )

[node name="CalmSprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 4 )
hframes = 5
region_enabled = true
region_rect = Rect2( 0, 320, 80, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 1 )

[node name="PlayerDetect" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
one_shot = true
explosiveness = 0.77
randomness = 1.0
lifetime_randomness = 0.3
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
initial_velocity = 159.19
damping = 100.0
scale_amount = 3.0
scale_amount_random = 0.79

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
